--- a/package.json
+++ b/package.json
@@ -11,37 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "rxjs": "~6.4.0",
+    "@angular/animations": "~9.0.0-rc.7",
+    "@angular/common": "~9.0.0-rc.7",
+    "@angular/compiler": "~9.0.0-rc.7",
+    "@angular/core": "~9.0.0-rc.7",
+    "@angular/forms": "~9.0.0-rc.7",
+    "@angular/platform-browser": "~9.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
+    "@angular/router": "~9.0.0-rc.7",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.5.4",
+    "font-awesome": "4.7.0",
+    "ionicons": "2.0.1",
+    "ngx-toastr": "^10.2.0",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
-    "@angular/cli": "~8.3.22",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~0.900.0-rc.7",
+    "@angular/cli": "~9.0.0-rc.7",
+    "@angular/compiler-cli": "~9.0.0-rc.7",
+    "@angular/language-service": "~9.0.0-rc.7",
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@types/node": "~8.9.4",
+    "admin-lte": "3.0.0-rc.1",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "~5.11.0",
+    "typescript": "~3.6.4"
   }
 }
